--- a/package.json
+++ b/package.json
@@ -1,83 +1,86 @@
 {
-  "name": "angular-core-workshop",
+  "name": "workshop",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "concurrently \"npm run server\" \"ng serve\"",
+    "nx": "nx",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "./node_modules/.bin/nx lint && ng lint",
+    "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
-    "affected:apps": "./node_modules/.bin/nx affected:apps",
-    "affected:libs": "./node_modules/.bin/nx affected:libs",
-    "affected:build": "./node_modules/.bin/nx affected:build",
-    "affected:e2e": "./node_modules/.bin/nx affected:e2e",
-    "affected:test": "./node_modules/.bin/nx affected:test",
-    "affected:lint": "./node_modules/.bin/nx affected:lint",
-    "affected:dep-graph": "./node_modules/.bin/nx affected:dep-graph",
-    "format": "./node_modules/.bin/nx format:write",
-    "format:write": "./node_modules/.bin/nx format:write",
-    "format:check": "./node_modules/.bin/nx format:check",
-    "update": "ng update @nrwl/schematics",
+    "affected:apps": "nx affected:apps",
+    "affected:libs": "nx affected:libs",
+    "affected:build": "nx affected:build",
+    "affected:e2e": "nx affected:e2e",
+    "affected:test": "nx affected:test",
+    "affected:lint": "nx affected:lint",
+    "affected:dep-graph": "nx affected:dep-graph",
+    "affected": "nx affected",
+    "format": "nx format:write",
+    "format:write": "nx format:write",
+    "format:check": "nx format:check",
+    "update": "ng update @nrwl/workspace",
     "update:check": "ng update",
-    "workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
-    "dep-graph": "./node_modules/.bin/nx dep-graph",
-    "help": "./node_modules/.bin/nx help",
-    "affected": "./node_modules/.bin/nx affected"
+    "workspace-schematic": "nx workspace-schematic",
+    "dep-graph": "nx dep-graph",
+    "help": "nx help"
   },
   "private": true,
   "dependencies": {
+    "@nrwl/nx": "7.8.7",
+    "@angular/animations": "^8.2.0",
+    "@ngrx/store-devtools": "8.4.0",
+    "@ngrx/router-store": "8.4.0",
+    "@angular/common": "^8.2.0",
+    "@angular/compiler": "^8.2.0",
+    "@angular/core": "^8.2.0",
+    "@angular/forms": "^8.2.0",
+    "@angular/platform-browser": "^8.2.0",
+    "@angular/platform-browser-dynamic": "^8.2.0",
+    "@angular/router": "^8.2.0",
+    "core-js": "^2.5.4",
+    "rxjs": "~6.4.0",
+    "hammerjs": "^2.0.8",
+    "zone.js": "^0.9.1"
+  },
+  "devDependencies": {
     "@angular/animations": "^8.2.12",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.12",
-    "@angular/compiler": "^8.2.12",
-    "@angular/core": "^8.2.12",
     "@angular/forms": "^8.2.12",
     "@angular/material": "^8.2.3",
     "@angular/material-moment-adapter": "^8.2.3",
-    "@angular/platform-browser": "^8.2.12",
-    "@angular/platform-browser-dynamic": "^8.2.12",
-    "@angular/router": "^8.2.12",
-    "@auth0/angular-jwt": "^3.0.0",
-    "@ngrx/effects": "8.4.0",
-    "@ngrx/router-store": "8.4.0",
-    "@ngrx/store": "8.4.0",
-    "@nrwl/nx": "7.8.7",
-    "core-js": "^3.3.5",
-    "hammerjs": "^2.0.8",
-    "jsonwebtoken": "^8.3.0",
-    "moment": "^2.23.0",
-    "rxjs": "^6.5.3",
-    "tslib": "^1.9.0",
-    "zone.js": "^0.9.1",
-    "@ngrx/entity": "8.4.0"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.15",
-    "@angular/cli": "8.3.15",
-    "@angular/compiler-cli": "^8.2.12",
-    "@angular/language-service": "^8.2.12",
-    "@ngrx/store-devtools": "8.4.0",
-    "@nrwl/schematics": "8.7.0",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular/cli": "8.3.14",
+    "@nrwl/workspace": "8.8.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
-    "concurrently": "^4.0.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-marbles": "0.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "json-server": "^0.14.0",
-    "karma": "^4.2.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "prettier": "1.15.2",
-    "protractor": "~5.4.0",
+    "@ngrx/effects": "8.4.0",
+    "@ngrx/store": "8.4.0",
+    "@ngrx/entity": "8.4.0",
+    "dotenv": "6.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "eslint": "6.1.0",
+    "typescript": "~3.5.3",
+    "prettier": "1.18.2",
+    "@angular/compiler-cli": "^8.2.0",
+    "@angular/language-service": "^8.2.0",
+    "@angular-devkit/build-angular": "^0.803.14",
+    "codelyzer": "~5.0.1",
+    "jest-preset-angular": "7.0.0",
+    "@nrwl/jest": "8.8.3",
+    "jest": "24.1.0",
+    "@types/jest": "24.0.9",
+    "ts-jest": "24.0.0",
+    "cypress": "3.4.1",
+    "@nrwl/cypress": "8.8.3",
+    "karma": "~4.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "@types/jasmine": "~2.8.8"
   }
 }
