--- a/angular.json
+++ b/angular.json
@@ -92,12 +92,12 @@
             ]
           }
         },
-        "main": {
-          "builder": "@nrwl/jest:jest",
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "jestConfig": "apps/main/jest.config.js",
+            "main": "apps/main/src/test.ts",
             "tsConfig": "apps/main/tsconfig.spec.json",
-            "setupFile": "apps/main/src/main-setup.ts"
+            "karmaConfig": "apps/main/karma.conf.js"
           }
         }
       }
