Added Angular PWA Service Workers

--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
             "aot": false,
             "assets": [
               "apps/main/src/favicon.ico",
-              "apps/main/src/assets"
+              "apps/main/src/assets",
+              "apps/main/src/manifest.webmanifest"
             ],
             "styles": [
               "apps/main/src/styles.scss"
@@ -58,7 +59,9 @@
                   "maximumWarning": "6kb",
                   "maximumError": "10kb"
                 }
-              ]
+              ],
+              "serviceWorker": true,
+              "ngswConfigPath": "apps/main/ngsw-config.json"
             }
           }
         },
@@ -97,7 +100,10 @@
           "options": {
             "main": "apps/main/src/test.ts",
             "tsConfig": "apps/main/tsconfig.spec.json",
-            "karmaConfig": "apps/main/karma.conf.js"
+            "karmaConfig": "apps/main/karma.conf.js",
+            "assets": [
+              "apps/main/src/manifest.webmanifest"
+            ]
           }
         }
       }
