--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "workshop",
+  "name": "proximie",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -29,20 +29,22 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/nx": "7.8.7",
     "@angular/animations": "^8.2.0",
-    "@ngrx/store-devtools": "8.4.0",
-    "@ngrx/router-store": "8.4.0",
     "@angular/common": "^8.2.0",
     "@angular/compiler": "^8.2.0",
     "@angular/core": "^8.2.0",
     "@angular/forms": "^8.2.0",
     "@angular/platform-browser": "^8.2.0",
     "@angular/platform-browser-dynamic": "^8.2.0",
+    "@angular/pwa": "^0.803.20",
     "@angular/router": "^8.2.0",
+    "@angular/service-worker": "^8.2.0",
+    "@ngrx/router-store": "8.4.0",
+    "@ngrx/store-devtools": "8.4.0",
+    "@nrwl/nx": "7.8.7",
     "core-js": "^2.5.4",
-    "rxjs": "~6.4.0",
     "hammerjs": "^2.0.8",
+    "rxjs": "~6.4.0",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
